--- a/index.html
+++ b/index.html
@@ -39,4 +39,38 @@
 
 <body>
 
+
+ <!-- footer element -->
+    <footer id="footerSocials">
+      <ul id="social-networks" class="socials">
+        <li>
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+            aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li>
+          <a href="https://www.X.com/" target="_blank" rel="noopener"
+            aria-label="visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+            aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+            aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+      </ul>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="js/main.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"></script>
+
+    <!-- JavaScript fontawesome kit -->
+    <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
+  </main>
 </body>
+</html>
