Added battle roster logo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <meta name="keywords"
     content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
   <title>BattleRoster | Game Rosters</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="assets/images/logo/battleroster-logo.png" alt="BattleRoster Logo" id="battleroster-logo">
+        <img src="assets/images/battleroster-logo.png" alt="BattleRoster Logo" id="battleroster-logo">
       </a>
       <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
