Testing colour schemes with basic css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
   <title>BattleRoster | Game Rosters</title>
   <link rel="stylesheet" href="style.css">
-</head>
 
  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
@@ -18,27 +17,31 @@
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="assets/images/battleroster-logo.png" alt="BattleRoster Logo" id="battleroster-logo">
       </a>
-      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      
       <div class="collapse navbar-collapse justify-content-end" id="navMenu">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-purple" href="">Characters</a>
+            <a class="nav-link text" href="">Characters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-purple" href="">Party</a>
+            <a class="nav-link text" href="">Party</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-purple" href="">Contact</a>
+            <a class="nav-link text" href="">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+</head>
 
 <body>
 
+  <div>
+
+  </div>
+
+</body>
 
  <!-- footer element -->
     <footer id="footerSocials">
@@ -72,5 +75,4 @@
     <!-- JavaScript fontawesome kit -->
     <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
   </main>
-</body>
 </html>
