--- a/index.html
+++ b/index.html
@@ -25,32 +25,31 @@
       </a>
 
       <!-- Hamburger button -->
-      <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
-      aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!-- Menu items -->
-<div class="collapse navbar-collapse justify-content-end" id="navMenu">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">
-        <i class="fa-solid fa-user me-2 text-gold"></i>Characters
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">
-        <i class="fa-solid fa-users me-2 text-gold"></i>Party
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">
-        <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
-      </a>
-    </li>
-  </ul>
-</div>
-    </div>
+      <!-- Navbar items -->
+      <div class="collapse navbar-collapse justify-content-end" id="navMenu">
+        <ul class="navbar-nav flex-column align-items-start">
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fa-solid fa-user me-2 text-gold"></i>Characters
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fa-solid fa-users me-2 text-gold"></i>Party
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
+            </a>
+          </li>
+        </ul>
+      </div>
   </nav>
 
   <div>
