Created additional pages for characters, Party, Accounts & Contact with logo return to Homepage.Also updated welcome message to include new page structure

--- a/characters.html
+++ b/characters.html
@@ -8,7 +8,7 @@
     content="BattleRoster is designed to streamline tabletop game management for both players and dungeon masters.">
   <meta name="keywords"
     content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
-  <title>BattleRoster | Game Roster management</title>
+  <title>BattleRoster | Characters</title>
   <link rel="stylesheet" href="style.css">
 
   <!-- Bootstrap CSS -->
@@ -60,32 +60,6 @@
   <!-- Main content -->
   <div class="container-fluid bg-dark text-light py-5">
     <div class="row justify-content-center align-items-center">
-
-      <!-- Image -->
-      <div id= welcome-adventurer-image class="col-md-6 d-flex justify-content-center mb-4 mb-md-0">
-        <img src="/assets/images/welcome-adventurer.webp"
-          alt="A burly but friendly barkeep welcomes you to his tavern adventurer" class="img-fluid"
-          style="max-width: 100%; height: auto; object-fit: contain;">
-      </div>
-
-      <!-- Text box -->
-      <div id="welcome-adventurer-text" class="col-md-5">
-        <div class="p-5" style="background-color: rgba(69, 64, 61, 0.7);">
-          <h1>Welcome, Adventurer!</h1><br>
-          <p>
-            Step into the tavern and explore new adventures with fellow travellers.
-            Feel free to rest, take stock of your party and prepare for your next quest over a tankard or two of my
-            finest ale.<br>
-            <br>Select the <b>Characters</b> option from the menu to create or manage your rosters.<br>
-            <br>You can also team up with other adventurers with the <b>Party</b> tab and check their overall health or mana levels <br>
-            <br> We also cater for Dungeon Masters who can register straight away and keep a watch on the whole party during your quest via the <b>Sign-up/Log-in</b> menu tab.<br>
-            <br> To return to the bar, just click the <b>BattleRoster Logo</b>.<br>
-            <br>Any problems, or if that fella in the corner is bothering you, just let me know in the <b>Contact</b> tab.
-        </div>
-      </div>
-
-    </div>
-  </div>
 
 
 
