--- a/characters.html
+++ b/characters.html
@@ -2,96 +2,167 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description"
-    content="BattleRoster is designed to streamline tabletop game management for both players and dungeon masters.">
-  <meta name="keywords"
-    content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
-  <title>BattleRoster | Characters</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="BattleRoster is designed to streamline tabletop game management for both players and dungeon masters.">
+    <meta name="keywords"
+        content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
+    <title>BattleRoster | Characters</title>
+    <link rel="stylesheet" href="css/style.css">
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <!-- Logo -->
-      <a class="navbar-brand" href="index.html">
-        <img class="home" src="assets/images/battleroster-logo.png" alt="BattleRoster Logo" id="battleroster-logo">
-      </a>
-
-      <!-- Hamburger button -->
-      <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- Navbar items -->
-      <div class="collapse navbar-collapse justify-content-end" id="navMenu">
-        <ul class="navbar-nav flex-column align-items-start">
-          <li class="nav-item">
-            <a class="nav-link" href="characters.html">
-              <i class="fa-solid fa-user me-2 text-gold"></i>Characters
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <!-- Logo -->
+            <a class="navbar-brand" href="index.html">
+                <img class="home" src="assets/images/battleroster-logo.png" alt="BattleRoster Logo"
+                    id="battleroster-logo">
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="party.html">
-              <i class="fa-solid fa-users me-2 text-gold"></i>Party
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="signup-login.html">
-              <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">
-              <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
-            </a>
-          </li>
-        </ul>
-      </div>
-  </nav>
 
-  <!-- Main content -->
-  <div class="container-fluid bg-dark text-light py-5">
-    <div class="row justify-content-center align-items-center">
+            <!-- Hamburger button -->
+            <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Navbar items -->
+            <div class="collapse navbar-collapse justify-content-end" id="navMenu">
+                <ul class="navbar-nav flex-column align-items-start">
+                    <li class="nav-item">
+                        <a class="nav-link" href="characters.html">
+                            <i class="fa-solid fa-user me-2 text-gold"></i>Characters
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="party.html">
+                            <i class="fa-solid fa-users me-2 text-gold"></i>Party
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="signup-login.html">
+                            <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">
+                            <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
+    </nav>
+
+    <!-- Main content -->
+    <!--<div class="container-fluid bg-dark text-light py-5"> -->
+        <div class="row justify-content-center align-items-center"> 
+            <div class="character-sheet">
+                <h1>{{ character.name }}</h1>
+
+                <div class="sheet-grid">
+                    <!-- Left column -->
+                    <div class="section abilities">
+                        <h3>Ability Scores</h3>
+                        <div class="ability">
+                            <h4>Strength</h4>
+                            <div class="score">{{ character.strength }}</div>
+                            <div class="modifier">+{{ character.str_mod }}</div>
+                        </div>
+                        <!-- repeat for dex, con, int, wis, cha -->
+                    </div>
+
+                    <!-- Middle column -->
+                    <div>
+                        <div class="section skills">
+                            <h3>Skills</h3>
+                            <ul>
+                                <li>Stealth: +{{ character.stealth }}</li>
+                                <li>Arcana: +{{ character.arcana }}</li>
+                                <!-- etc -->
+                            </ul>
+                        </div>
+                        <div class="section weapons">
+                            <h3>Weapons</h3>
+                            <table>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Bonus</th>
+                                    <th>Damage</th>
+                                </tr>
+                                {% for weapon in character.weapons.all %}
+                                <tr>
+                                    <td>{{ weapon.name }}</td>
+                                    <td>{{ weapon.attack_bonus }}</td>
+                                    <td>{{ weapon.damage }}</td>
+                                </tr>
+                                {% endfor %}
+                            </table>
+                        </div>
+                    </div>
+
+                    <!-- Right column -->
+                    <div>
+                        <div class="section spells">
+                            <h3>Spells</h3>
+                            <h4>Cantrips</h4>
+                            <ul>
+                                {% for spell in character.spells.cantrips %}
+                                <li>{{ spell }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="section traits">
+                            <h3>Traits</h3>
+                            <p><strong>Personality:</strong> {{ character.personality }}</p>
+                            <p><strong>Ideals:</strong> {{ character.ideals }}</p>
+                            <p><strong>Bonds:</strong> {{ character.bonds }}</p>
+                            <p><strong>Flaws:</strong> {{ character.flaws }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 
-  <!-- Footer -->
-  <footer id="footerSocials">
-    <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
-      <li>
-        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-          aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-      </li>
-      <li>
-        <a href="https://www.X.com/" target="_blank" rel="noopener"
-          aria-label="visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-          aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-          aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-      </li>
-    </ul>
-  </footer>
 
-  <!-- Scripts -->
-  <script src="js/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
+            <!-- Footer -->
+            <footer id="footerSocials">
+                <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                            aria-label="visit our Facebook page (opens in a new tab)"><i
+                                class="fa-brands fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.X.com/" target="_blank" rel="noopener"
+                            aria-label="visit our X page (opens in a new tab)"><i
+                                class="fa-brands fa-square-x-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                            aria-label="visit our YouTube page (opens in a new tab)"><i
+                                class="fa-brands fa-youtube-square"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                            aria-label="visit our Instagram page (opens in a new tab)"><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </footer>
+
+            <!-- Scripts -->
+            <script src="js/main.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+                crossorigin="anonymous"></script>
+            <!-- Font Awesome -->
+            <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
