quick image url change

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <!-- Image -->
       <div id= welcome-adventurer-image class="col-md-6 d-flex justify-content-center mb-4 mb-md-0">
-        <img src="assets/images/welcome-adventurer.webp"
+        <img src="../assets/images/welcome-adventurer.webp"
           alt="A burly but friendly barkeep welcomes you to his tavern adventurer" class="img-fluid"
           style="max-width: 100%; height: auto; object-fit: contain;">
       </div>
