restore html files to last working state

--- a/characters.html
+++ b/characters.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en-US">
 
@@ -10,8 +9,7 @@
     <meta name="keywords"
         content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
     <title>BattleRoster | Characters</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <!-- Logo -->
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="index.html">
                 <img class="home" src="assets/images/battleroster-logo.png" alt="BattleRoster Logo"
                     id="battleroster-logo">
             </a>
@@ -37,22 +35,22 @@
             <div class="collapse navbar-collapse justify-content-end" id="navMenu">
                 <ul class="navbar-nav flex-column align-items-start">
                     <li class="nav-item">
-                        <a class="nav-link" href="/characters.html">
+                        <a class="nav-link" href="characters.html">
                             <i class="fa-solid fa-user me-2 text-gold"></i>Characters
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/party.html">
+                        <a class="nav-link" href="party.html">
                             <i class="fa-solid fa-users me-2 text-gold"></i>Party
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/signup-login.html">
+                        <a class="nav-link" href="signup-login.html">
                             <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">
+                        <a class="nav-link" href="contact.html">
                             <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
                         </a>
                     </li>
