Temporary static files setup for Heroku

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords"
     content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
   <title>BattleRoster | Game Roster management</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="static/css/style.css">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <div class="container">
       <!-- Logo -->
       <a class="navbar-brand" href="index.html">
-        <img class="home" src="assets/images/battleroster-logo.png" alt="BattleRoster Logo" id="battleroster-logo">
+        <img class="home" src="static/images/battleroster-logo.png" alt="BattleRoster Logo" id="battleroster-logo">
       </a>
 
       <!-- Hamburger button -->
@@ -63,7 +63,7 @@
 
       <!-- Image -->
       <div id= welcome-adventurer-image class="col-md-6 d-flex justify-content-center mb-4 mb-md-0">
-        <img src="assets/images/welcome-adventurer.png"
+        <img src="static/images/welcome-adventurer.png"
           alt="A burly but friendly barkeep welcomes you to his tavern adventurer" class="img-fluid"
           style="max-width: 100%; height: auto; object-fit: contain;">
       </div>
