--- a/characters.html
+++ b/characters.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
     <title>BattleRoster | Characters</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand" href="index.html">
-                <img class="home" src="assets/images/battleroster-logo.png" alt="BattleRoster Logo"
+                <img class="home" src="static/images/battleroster-logo.png" alt="BattleRoster Logo"
                     id="battleroster-logo">
             </a>
 
